apps/jotunheim/health-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: health.T-Py-T.net
  name: health-api
spec:
  ingressClassName: cilium
  rules:
    - host: health.T-Py-T.net
      http:
        paths:
          - backend:
              service:
                name: health-api
                port:
                  number: 8000
            path: /
            pathType: Prefix
